fix making side boxes (closer summaries) invisible

--- a/src/Comment.layers.less
+++ b/src/Comment.layers.less
@@ -37,12 +37,20 @@
 @media screen {
   html.skin-theme-clientpref-night {
     .darkTheme-commentVars();
+
+    .side-box .cd-commentLayersContainer {
+      background: initial !important;
+    }
   }
 }
 
 @media screen and (prefers-color-scheme: dark) {
   html.skin-theme-clientpref-os {
     .darkTheme-commentVars();
+
+    .side-box .cd-commentLayersContainer {
+      background: initial !important;
+    }
   }
 }
 
